--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\TaskList.Core\packages.config" />
+  <repository path="..\TaskList.Tests\packages.config" />
   <repository path="..\TaskList.Web\packages.config" />
   <repository path="..\TaskList\packages.config" />
 </repositories>
