--- a/TaskList.Core/packages.config
+++ b/TaskList.Core/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="2.6.2.859" />
+  <package id="Autofac.Mvc3" version="2.6.2.859" />
   <package id="EntityFramework" version="4.1.10331.0" />
 </packages>
