--- a/TaskList.Web/TaskList.Web.csproj
+++ b/TaskList.Web/TaskList.Web.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\NewTaskController.cs" />
+    <Compile Include="Controllers\TaskListController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -140,6 +141,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NewTask\TaskList.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NewTask\Save.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\TaskList\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\TaskList\NewTask.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
