--- a/TaskList.Core/TaskList.Core.csproj
+++ b/TaskList.Core/TaskList.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Concrete\TaskRepository.cs" />
     <Compile Include="Entities\Task.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\DateRangeAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
