--- a/TaskList.Web/TaskList.Web.csproj
+++ b/TaskList.Web/TaskList.Web.csproj
@@ -61,6 +61,10 @@
     <Compile Include="TaskListControllerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\TaskList.css" />
+    <Content Include="Content\themes\base\images\asc.gif" />
+    <Content Include="Content\themes\base\images\bg.gif" />
+    <Content Include="Content\themes\base\images\desc.gif" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -96,6 +100,7 @@
     <Content Include="Scripts\jquery-1.5.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <Content Include="Scripts\jquery.tablesorter.min.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
