unit/integration tests, exception handling

--- a/TaskList.Tests/TaskList.Tests.csproj
+++ b/TaskList.Tests/TaskList.Tests.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -39,15 +40,28 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Concrete\TaskRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\Controllers\TaskListControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Web\" />
+    <ProjectReference Include="..\TaskList.Core\TaskList.Core.csproj">
+      <Project>{82B1AD3F-51C6-4C40-AF8F-F0A6D1DB0182}</Project>
+      <Name>TaskList.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TaskList.Web\TaskList.Web.csproj">
+      <Project>{D5E237DF-976C-4C5F-A2E4-013477DC66E2}</Project>
+      <Name>TaskList.Web</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
