--- a/TaskList.Web/TaskList.Web.csproj
+++ b/TaskList.Web/TaskList.Web.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\DateTimeUtils.cs" />
+    <Compile Include="Models\ErrorPresentation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskListControllerFactory.cs" />
   </ItemGroup>
@@ -128,9 +130,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
@@ -148,6 +148,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\TaskList\NewTask.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\TaskList\DueTasks.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
